Added PWA. GET after DELETE calls are now synchronous. Minor file formatting changes.

--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "@angular/forms": "~8.2.3",
     "@angular/platform-browser": "~8.2.3",
     "@angular/platform-browser-dynamic": "~8.2.3",
+    "@angular/pwa": "^0.901.4",
     "@angular/router": "~8.2.3",
+    "@angular/service-worker": "~8.2.3",
     "@aws-amplify/ui": "^1.2.3",
     "@babel/compat-data": "^7.9.0",
     "aws-amplify": "^2.3.0",
@@ -46,6 +48,7 @@
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine": "~2.0.1",
     "karma-jasmine-html-reporter": "^1.4.0",
+    "prettier": "2.0.5",
     "protractor": "^5.4.4",
     "ts-node": "~7.0.0",
     "tslint": "~5.15.0",
