--- a/ngsw-config.json
+++ b/ngsw-config.json
@@ -24,7 +24,10 @@
           "/assets/**",
           "/*.(eot|svg|cur|jpg|png|webp|gif|otf|ttf|woff|woff2|ani)"
         ],
-        "urls": ["https://fonts.googleapis.com/**"]
+        "urls": [
+          "https://fonts.googleapis.com/**",
+          "https://fonts.gstatic.com/**"
+        ]
       }
     }
   ]
